--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "commander": "~1.1.1",
     "github": "~0.1.8",
     "async": "~0.2.8",
-    "nconf": "~0.6.7"
+    "nconf": "~0.6.7",
+    "hipchat": "0.0.2",
+    "underscore": "~1.4.4"
   }
 }
