--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Automated Leverage Box Operation Tool",
   "main": "albot.coffee",
   "scripts": {
-    "test": "./node_modules/.bin/mocha"
+    "test": "./node_modules/.bin/grunt test"
   },
   "repository": "",
   "author": "Aurélien Thieriot",
@@ -20,7 +20,9 @@
     "styled": "0.0.1"
   },
   "devDependencies": {
-    "mocha": "~1.9.0",
-    "chai": "~1.6.0"
+    "chai": "~1.6.0",
+    "grunt": "~0.4.1",
+    "grunt-cli": "~0.1.8",
+    "grunt-mocha-cli": "~1.0.5"
   }
 }
