--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "./node_modules/.bin/grunt test"
   },
   "repository": "",
-  "author": "Aurélien Thieriot",
+  "author": "Box UK",
   "license": "MIT",
   "dependencies": {
     "commander": "~1.1.1",
