--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "chai": "~1.6.0",
     "grunt": "~0.4.1",
     "grunt-cli": "~0.1.8",
+    "grunt-env": "~0.4.0",
+    "grunt-exec": "~0.4.0",
     "grunt-mocha-cli": "~1.0.5",
     "nock": "~0.18.0",
-    "grunt-env": "~0.4.0"
+    "covershot": "~0.1.1",
+    "coffee-coverage": "~0.1.3"
   }
 }
