--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nconf": "~0.6.7",
     "hipchat": "0.0.2",
     "underscore": "~1.4.4",
-    "styled": "0.0.1"
+    "styled": "0.0.1",
+    "moment": "~2.0.0"
   },
   "devDependencies": {
     "chai": "~1.6.0",
