--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "preferGlobal": "true",
   "main": "albot.coffee",
   "bin": {
-    "albot" : "albot.coffee"
+    "albot": "albot.coffee"
   },
   "scripts": {
     "test": "./node_modules/.bin/grunt test"
@@ -21,7 +21,8 @@
     "hipchat": "0.0.2",
     "underscore": "~1.4.4",
     "styled": "0.0.1",
-    "moment": "~2.0.0"
+    "moment": "~2.0.0",
+    "coffee-script": "~1.6.2"
   },
   "devDependencies": {
     "chai": "~1.6.0",
