--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "albot": "albot.coffee"
   },
   "scripts": {
-    "test": "./node_modules/.bin/grunt test"
+    "test": "./node_modules/.bin/grunt test",
+    "coverage": "./node_modules/.bin/grunt coverage"
   },
   "repository": "https://github.com/boxuk/albot",
   "author": "Box UK",
@@ -33,6 +34,6 @@
     "grunt-mocha-cli": "~1.0.5",
     "nock": "~0.18.0",
     "covershot": "~0.1.1",
-    "coffee-coverage": "~0.1.3"
+    "grunt-coffee-coverage": "~0.1.1"
   }
 }
