--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "styled": "0.0.1",
     "moment": "~2.0.0",
     "coffee-script": "~1.6.2",
-    "underscore.string": "~2.3.1"
+    "underscore.string": "~2.3.1",
+    "mkdirp": "~0.3.5",
+    "temp": "~0.5.0"
   },
   "devDependencies": {
     "chai": "~1.6.0",
