--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "underscore": "~1.4.4",
     "styled": "0.0.1",
     "moment": "~2.0.0",
-    "coffee-script": "~1.6.2"
+    "coffee-script": "~1.6.2",
+    "underscore.string": "~2.3.1"
   },
   "devDependencies": {
     "chai": "~1.6.0",
