--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "coffee-script": "~1.6.2",
     "underscore.string": "~2.3.1",
     "mkdirp": "~0.3.5",
-    "temp": "~0.5.0"
+    "temp": "~0.5.0",
+    "winston": "~0.7.2"
   },
   "devDependencies": {
     "chai": "~1.7.0",
