--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "async": "~0.2.8",
     "nconf": "~0.6.7",
     "hipchat": "0.0.2",
-    "underscore": "~1.4.4",
+    "underscore": "~1.5.0",
     "styled": "0.0.1",
-    "moment": "~2.0.0",
+    "moment": "~2.1.0",
     "coffee-script": "~1.6.2",
     "underscore.string": "~2.3.1",
     "mkdirp": "~0.3.5",
@@ -40,7 +40,7 @@
     "grunt-coffee-coverage": "~0.1.1",
     "coveralls": "~2.0",
     "grunt-release": "~0.3.3",
-    "grunt-coffeelint": "0.0.6",
+    "grunt-coffeelint": "~0.0.7",
     "grunt-contrib-clean": "~0.4.1",
     "matchdep": "~0.1.2"
   },
