--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "underscore.string": "~2.3.1",
     "mkdirp": "~0.3.5",
     "temp": "~0.5.0",
+    "aws-sdk": "~1.3.1",
     "winston": "~0.7.2"
   },
   "devDependencies": {
@@ -43,7 +44,8 @@
     "grunt-release": "~0.3.3",
     "grunt-coffeelint": "~0.0.7",
     "grunt-contrib-clean": "~0.4.1",
-    "matchdep": "~0.1.2"
+    "matchdep": "~0.1.2",
+    "schmock": "0.0.5"
   },
   "engines": {
     "node": ">=0.10.x",
