Fix #28: Add a post processing function to deploy
- Let user doing stuff with file after Github download
- Will permit activation of a higher Log Level in Capistrano

--- a/.albot.json.template
+++ b/.albot.json.template
@@ -19,6 +19,7 @@
     "args": [],
     "branchArg": "{{branch}}",
     "env": [],
+    "postProcessFile": "function(path, content, callback) { callback(null, content); }",
     "gistId": ""
   },
   "changelog": {
