--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "temp": "~0.5.0",
     "aws-sdk": "~1.3.1",
     "winston": "~0.7.2",
-    "xregexp": "~2.0.0"
+    "xregexp": "~2.0.0",
+    "funcster": "0.0.2"
   },
   "devDependencies": {
     "chai": "~1.7.0",
