--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mkdirp": "~0.3.5",
     "temp": "~0.5.0",
     "aws-sdk": "~1.3.1",
-    "winston": "~0.7.2"
+    "winston": "~0.7.2",
+    "xregexp": "~2.0.0"
   },
   "devDependencies": {
     "chai": "~1.7.0",
