--- a/.albot.json.template
+++ b/.albot.json.template
@@ -30,5 +30,11 @@
     "key": "",
     "secret": "",
     "region": ""
+  },
+  "jira": {
+    "host": "",
+    "user": "",
+    "password": "",
+    "storyPointsField": ""
   }
 }
