Fix #46 - accept an extra argument

--- a/.albot.json.template
+++ b/.albot.json.template
@@ -18,6 +18,7 @@
     "exec": "",
     "args": [],
     "branchArg": "{{branch}}",
+    "extraArg": "{{extra}}",
     "env": [],
     "postProcessFile": "function(path, content, callback) { callback(null, content); }",
     "gistId": ""
